# Rasa

./: .gitignore  app.py  config.yml  credentials.yml  domain.yml  endpoints.yml  outbound_caller.py  pyproject.toml  rasa_handler.py  requirements.txt  sarvam_tts.py  twilio_handler.py
data/: nlu.yml  rules.yml  stories.yml
